<resources>
    <string name="app_name">OfficeCrimesFall2020</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="crime_title_label">Title</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_details_label">Details</string>
    <string name="default_crime_title">Crime Title</string>
    <string name="default_crime_date">Crime Date</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">OfficeCrimes Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>